--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>tn.esprit</groupId>
     <artifactId>firstProject</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     <name>firstProject</name>
     <description>firstProject</description>
     <properties>
