--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,45 @@
-version: "3.8"
+version: '3.8'
 
 services:
-  mysqldb:
-    image: mysql:8
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "3306:3306"
+      - "8082:8080"  # Mappe le port 8080 de l'application au port 8082 de l'hôte
+    networks:
+      - app-network
     environment:
-      MYSQL_DATABASE: 4se21          # Nom de la base de données à créer
-      MYSQL_ROOT_PASSWORD: ""         # Mot de passe vide pour l'utilisateur root
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/4se21
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=
+
+  mysql:
+    image: mysql:latest
+    ports:
+      - "3306:3306"  # Mappe le port 3306 du conteneur MySQL
+    networks:
+      - app-network
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: 4se21
     volumes:
       - mysql_data:/var/lib/mysql
-    healthcheck:                     # Pour s'assurer que MySQL est prêt avant de lancer le service Spring Boot
-      test: ["CMD", "mysqladmin", "ping", "--silent"]
-      interval: 10s
-      retries: 3
 
-  springboot:
-    image: yassine121/5se2:latest
-    ports:
-      - "8082:8080"
-    depends_on:
-      mysqldb:
-        condition: service_healthy
+  test-mysql:
+    image: mysql:latest
+    networks:
+      - app-network
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: 4se21  # Nom de la base de données pour les tests
+    volumes:
+      - test_mysql_data:/var/lib/mysql
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   mysql_data:
+  test_mysql_data:
