--- a/src/main/resources/docker-compose.yml
+++ b/src/main/resources/docker-compose.yml
@@ -12,7 +12,7 @@ services:
    environment:
   SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/4se21
   SPRING_DATASOURCE_USERNAME: root
-  SPRING_DATASOURCE_PASSWORD: root
+  SPRING_DATASOURCE_PASSWORD:
 
 
   mysql:
