--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
     networks:
       - app-network
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://127.20.0.1:3306/4se21
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/4se21
       - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD= ""
+      - SPRING_DATASOURCE_PASSWORD=
 
   mysql:
     image: mysql:latest
