--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8082
 spring.datasource.url=jdbc:mysql://127.20.0.1:3306/4se21?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=   # If there's no password, this can stay empty; otherwise, add it here.
+spring.datasource.password=root   # If there's no password, this can stay empty; otherwise, add it here.
 
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
