--- a/pom.xml
+++ b/pom.xml
@@ -85,12 +85,12 @@
         <repository>
             <id>deploymentRepo</id>
             <name>Nexus Releases Repository</name>
-            <url>http://localhost:8081/repository/maven-releases/</url>
+            <url>http://172.20.0.1:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
             <id>snapshotRepo</id>
             <name>Nexus Snapshots Repository</name>
-            <url>http://localhost:8081/repository/maven-snapshots/</url>
+            <url>http://172.20.0.1:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
