--- a/src/main/resources/docker-compose.yml
+++ b/src/main/resources/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/4se21
       SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: ""  # Environnements vides pour les mots de passe
+      SPRING_DATASOURCE_PASSWORD: ""
 
   mysql:
     image: mysql:latest
@@ -21,7 +21,7 @@ services:
     networks:
       - app-network
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: 
       MYSQL_DATABASE: 4se21
     volumes:
       - mysql_data:/var/lib/mysql
@@ -31,7 +31,7 @@ services:
     networks:
       - app-network
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD:
       MYSQL_DATABASE: 4se21  # Nom de la base de données pour les tests
     volumes:
       - test_mysql_data:/var/lib/mysql
