--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8082
 
 ### DATABASE CONFIGURATION ###
 # Update "localhost" to "mysql" if using Docker with the service name "mysql" in docker-compose.
-spring.datasource.url=jdbc:mysql://mysql:3306/4se21?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:latest:3306/4se21?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 
