--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,23 +2,18 @@
 server.port=8082
 
 ### DATABASE CONFIGURATION ###
-# Update "localhost" to "mysql" if using Docker with the service name "mysql" in docker-compose.
-spring.datasource.url=jdbc:mysql://professionnel-mysql-1:3306/4se21?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/4se21?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 ### JPA / HIBERNATE CONFIGURATION ###
-# Enables SQL logging and sets Hibernate to automatically update the schema
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 ### LOGGING CONFIGURATION ###
-# Set logging level for root and specific package
 logging.level.root=INFO
 logging.level.tn.esprit.spring.service=INFO
-
-# Configure log file settings
 logging.file.name=c:/logging/spring_file.log
 logging.logback.rollingpolicy.max-file-size=100KB
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %level - %logger{60} - %msg %n
