--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/4se21
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
+    depends_on:
+      - mysql
 
   mysql:
     image: mysql:latest
@@ -26,20 +28,9 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
 
-  test-mysql:
-    image: mysql:latest
-    networks:
-      - app-network
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: 4se21
-    volumes:
-      - test_mysql_data:/var/lib/mysql
-
 networks:
   app-network:
     driver: bridge
 
 volumes:
   mysql_data:
-  test_mysql_data:
