--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 ### LOGGING CONFIGURATION ###
 logging.level.root=INFO
 logging.level.tn.esprit.spring.service=INFO
-logging.file.name=c:/logging/spring_file.log
+logging.file.name=/var/log/spring/spring_file.log
 logging.logback.rollingpolicy.max-file-size=100KB
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %level - %logger{60} - %msg %n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %level - %logger{60} - %msg %n
