--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,27 @@
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>3.0.0</version> <!-- dernière version stable -->
             </plugin>
+    <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.8</version> <!-- Utilisez la dernière version disponible -->
+            <executions>
+                <!-- Exécution du plugin lors de la phase de test -->
+                <execution>
+                    <goals>
+                        <goal>prepare-agent</goal> <!-- Prépare l'agent JaCoCo pour le suivi de la couverture -->
+                    </goals>
+                </execution>
 
+                <!-- Exécution du plugin pour générer le rapport après les tests -->
+                <execution>
+                    <goals>
+                        <goal>report</goal> <!-- Génère le rapport de couverture -->
+                    </goals>
+                    <phase>verify</phase> <!-- Cette phase génère le rapport après les tests -->
+                </execution>
+            </executions>
+        </plugin>
         </plugins>
     </build>
 </project>
