--- a/pom.xml
+++ b/pom.xml
@@ -114,24 +114,23 @@
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>3.0.0</version> <!-- dernière version stable -->
             </plugin>
-    <plugin>
+   <plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.8.8</version> <!-- Utilisez la dernière version disponible -->
             <executions>
-                <!-- Exécution du plugin lors de la phase de test -->
                 <execution>
+                    <id>default-prepare-agent</id> <!-- Unique ID -->
+                    <phase>initialize</phase>
                     <goals>
-                        <goal>prepare-agent</goal> <!-- Prépare l'agent JaCoCo pour le suivi de la couverture -->
+                        <goal>prepare-agent</goal>
                     </goals>
                 </execution>
-
-                <!-- Exécution du plugin pour générer le rapport après les tests -->
                 <execution>
+                    <id>default-report</id> <!-- Unique ID -->
+                    <phase>prepare-package</phase>
                     <goals>
-                        <goal>report</goal> <!-- Génère le rapport de couverture -->
+                        <goal>report</goal>
                     </goals>
-                    <phase>verify</phase> <!-- Cette phase génère le rapport après les tests -->
                 </execution>
             </executions>
         </plugin>
