--- a/pom.xml
+++ b/pom.xml
@@ -77,8 +77,6 @@
             <version>3.24.2</version>
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
 
     <distributionManagement>
@@ -93,7 +91,6 @@
             <url>http://localhost:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
-
 
     <build>
         <plugins>
@@ -114,26 +111,27 @@
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>3.0.0</version> <!-- dernière version stable -->
             </plugin>
-   <plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <executions>
-                <execution>
-                    <id>default-prepare-agent</id> <!-- Unique ID -->
-                    <phase>initialize</phase>
-                    <goals>
-                        <goal>prepare-agent</goal>
-                    </goals>
-                </execution>
-                <execution>
-                    <id>default-report</id> <!-- Unique ID -->
-                    <phase>prepare-package</phase>
-                    <goals>
-                        <goal>report</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.8</version> <!-- Added the version here -->
+                <executions>
+                    <execution>
+                        <id>default-prepare-agent</id> <!-- Unique ID -->
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>default-report</id> <!-- Unique ID -->
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
