--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,15 @@
             <version>3.24.2</version>
             <scope>test</scope>
         </dependency>
+             <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
 
 
     </dependencies>
@@ -96,6 +105,7 @@
 
 
     <build>
+                 <finalName>ramzizargelayoun-devops-5se2</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
