--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,20 @@
-### DATABASE ###
+### SERVER CONFIGURATION ###
 server.port=8080
+
+### DATABASE CONFIGURATION ###
 spring.datasource.url=jdbc:mysql://localhost:3306/4se21?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
-### JPA / HIBERNATE ###
+spring.datasource.password=root
+
+### JPA / HIBERNATE CONFIGURATION ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-logging.level.root= INFO
-logging.level.tn.esprit.spring.service= INFO
-logging.logback.rollingpolicy.max-file-size= 100KB
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %level - %logger{60} - %msg %n
-logging.pattern.file= %msg %n
+### LOGGING CONFIGURATION ###
+logging.level.root=INFO
+logging.level.tn.esprit.spring.service=INFO
 logging.file.name=c:/logging/spring_file.log
+logging.logback.rollingpolicy.max-file-size=100KB
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %level - %logger{60} - %msg %n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %level - %logger{60} - %msg %n
