--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,25 @@
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>3.0.0</version> <!-- dernière version stable -->
             </plugin>
+                 <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.8</version> <!-- Make sure to use the latest version -->
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal> <!-- Prepares the agent to collect coverage data -->
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>verify</phase> <!-- Generates the coverage report during the verify phase -->
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
  
                  
         </plugins>
