--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       - app-network
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/4se21
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root
+      SPRING_DATASOURCE_USERNAME: 
+      SPRING_DATASOURCE_PASSWORD: 
     depends_on:
       - mysql
 
@@ -23,7 +23,7 @@ services:
     networks:
       - app-network
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: 
       MYSQL_DATABASE: 4se21
     volumes:
       - mysql_data:/var/lib/mysql
