--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8082
 
 ### DATABASE CONFIGURATION ###
 spring.datasource.url=jdbc:mysql://mysql:3306/4se21?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=
+spring.datasource.password=
 
 ### JPA / HIBERNATE CONFIGURATION ###
 spring.jpa.show-sql=true
