--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,22 +4,20 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: ./Dockerfile
     ports:
-      - "8084:8080"
+      - "8082:8080"  
     networks:
       - app-network
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/4se21
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root
-    depends_on:
-      - mysql
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/4se21
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD= ""
 
   mysql:
     image: mysql:latest
     ports:
-      - "3306:3306"
+      - "3306:3306"  
     networks:
       - app-network
     environment:
@@ -28,9 +26,20 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
 
+  test-mysql:
+    image: mysql:latest
+    networks:
+      - app-network
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: 4se21  
+    volumes:
+      - test_mysql_data:/var/lib/mysql
+
 networks:
   app-network:
     driver: bridge
 
 volumes:
   mysql_data:
+  test_mysql_data:
