Update ports docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,13 @@ services:
       context: .
       dockerfile: ./Dockerfile
     ports:
-      - "8082:8080"  
+      - "8083:8080"
     networks:
       - app-network
     environment:
       - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/4se21
       - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD= ""
+      - SPRING_DATASOURCE_PASSWORD=root
 
   mysql:
     image: mysql:latest
