--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8083
 ### DATABASE CONFIGURATION ###
 spring.datasource.url=jdbc:mysql://projetdevops-mysql-1:3306/4se21?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 ### JPA / HIBERNATE CONFIGURATION ###
 spring.jpa.show-sql=true
