--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,6 @@ services:
       - "8004:8080"
     networks:
       - app-network
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://localhost:3306/4se21
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=
 
   mysql:
     image: mysql:latest
@@ -21,7 +17,7 @@ services:
     networks:
       - app-network
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD:
       MYSQL_DATABASE: 4se21
     volumes:
       - mysql_data:/var/lib/mysql
