--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ logging.file.name=c:/logging/spring_file.log
 logging.logback.rollingpolicy.max-file-size=100KB
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %level - %logger{60} - %msg %n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %level - %logger{60} - %msg %n
+
+
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.prometheus.enabled=true
+management.endpoint.prometheus.path=/prometheus
+
