--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,5 @@ logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %level - %logger{60} - %msg %n
 
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.prometheus.enabled=true
-management.endpoint.prometheus.path=/prometheus
+management.endpoint.prometheus.path=/spring
 
